[package]
name = "traffic-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-sys = { version = "0.52.0", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
ureq = { version = "2.8.0", features = ["json"] }
fsd_interface = "0.1.20"